fix bug: link dose not work on firefox

--- a/frontend/src/components/list.scss
+++ b/frontend/src/components/list.scss
@@ -45,7 +45,6 @@
     min-height: 1rem;
     height: 25px;
     line-height: 25px;
-    font-weight: bold;
 }
 
 
@@ -220,11 +219,6 @@
 .submitReply {
     padding-left: 20%;
     padding-bottom: 10px;
-}
-.text-overflow {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
 .release span{
     color: #90949c;
